Update builder and base image
 - also update the Makefile target

--- a/Dockerfile.cliartifacts
+++ b/Dockerfile.cliartifacts
@@ -1,10 +1,10 @@
-FROM rhel8/go-toolset:1.13.4 AS builder
+FROM golang:1.13.4 AS builder
 WORKDIR /opt/app-root/src/go/src/github.com/knative/client
 USER root
 COPY . .
-RUN TAG="v0.12.0" make build-cross
+RUN TAG="v0.12.0" make build-cross-package
 
-FROM ubi8:8-released
+FROM registry.access.redhat.com/ubi8/ubi-minimal:latest
 RUN mkdir -p /usr/share/kn/{linux_amd64,macos,windows}
 COPY --from=builder /opt/app-root/src/go/src/github.com/knative/client/kn-linux-amd64.tar.gz /usr/share/kn/linux_amd64/kn-linux-amd64.tar.gz
 COPY --from=builder /opt/app-root/src/go/src/github.com/knative/client/kn-macos-amd64.tar.gz /usr/share/kn/macos/kn-macos-amd64.tar.gz
