--- a/openshift/ci-operator/knative-images/client/Dockerfile.cliartifacts
+++ b/openshift/ci-operator/knative-images/client/Dockerfile.cliartifacts
@@ -1,14 +1,11 @@
-FROM golang:1.13.4 AS builder
-WORKDIR /opt/app-root/src/go/src/github.com/knative/client
-USER root
-COPY . .
-RUN TAG="v0.12.0" make build-cross-package
-
 FROM registry.access.redhat.com/ubi8/ubi-minimal:latest
+
+RUN yum -y install zip && yum clean all
+RUN bash package_cliartifacts.sh
 RUN mkdir -p /usr/share/kn/{linux_amd64,macos,windows}
-COPY --from=builder /opt/app-root/src/go/src/github.com/knative/client/kn-linux-amd64.tar.gz /usr/share/kn/linux_amd64/kn-linux-amd64.tar.gz
-COPY --from=builder /opt/app-root/src/go/src/github.com/knative/client/kn-macos-amd64.tar.gz /usr/share/kn/macos/kn-macos-amd64.tar.gz
-COPY --from=builder /opt/app-root/src/go/src/github.com/knative/client/kn-windows-amd64.zip /usr/share/kn/windows/kn-windows-amd64.zip
+ADD kn-linux-amd64.tar.gz /usr/share/kn/linux_amd64/kn-linux-amd64.tar.gz
+ADD kn-macos-amd64.tar.gz /usr/share/kn/macos/kn-macos-amd64.tar.gz
+ADD kn-windows-amd64.zip /usr/share/kn/windows/kn-windows-amd64.zip
 
 LABEL \
       com.redhat.component="openshift-serverless-1-tech-preview-client-kn-rhel8-container" \
