--- a/openshift/ci-operator/knative-images/client/Dockerfile.cliartifacts
+++ b/openshift/ci-operator/knative-images/client/Dockerfile.cliartifacts
@@ -2,10 +2,10 @@ FROM registry.access.redhat.com/ubi8/ubi-minimal:latest
 
 RUN yum -y install zip && yum clean all
 RUN bash package_cliartifacts.sh
-RUN mkdir -p /usr/share/kn/{linux_amd64,macos,windows}
-ADD kn-linux-amd64.tar.gz /usr/share/kn/linux_amd64/kn-linux-amd64.tar.gz
-ADD kn-macos-amd64.tar.gz /usr/share/kn/macos/kn-macos-amd64.tar.gz
-ADD kn-windows-amd64.zip /usr/share/kn/windows/kn-windows-amd64.zip
+RUN mkdir -p /usr/share/kn/{linux_amd64,macos,windows} &&
+    mv kn-linux-amd64.tar.gz /usr/share/kn/linux_amd64/kn-linux-amd64.tar.gz && \
+    mv kn-macos-amd64.tar.gz /usr/share/kn/macos/kn-macos-amd64.tar.gz && \
+    mv kn-windows-amd64.zip /usr/share/kn/windows/kn-windows-amd64.zip
 
 LABEL \
       com.redhat.component="openshift-serverless-1-tech-preview-client-kn-rhel8-container" \
