--- a/openshift/ci-operator/knative-images/client/Dockerfile.cliartifacts
+++ b/openshift/ci-operator/knative-images/client/Dockerfile.cliartifacts
@@ -1,14 +1,16 @@
 FROM registry.access.redhat.com/ubi8/ubi-minimal:latest
 
-RUN microdnf install -y zip
+RUN microdnf install -y zip tar gzip
 ADD package_cliartifacts.sh .
 ADD LICENSE .
-ADD kn-*-amd64 .
+ADD kn-*-amd64* .
 RUN bash package_cliartifacts.sh
-RUN mkdir -p /usr/share/kn/{linux_amd64,macos,windows} &&
-    mv kn-linux-amd64.tar.gz /usr/share/kn/linux_amd64/kn-linux-amd64.tar.gz && \
-    mv kn-macos-amd64.tar.gz /usr/share/kn/macos/kn-macos-amd64.tar.gz && \
-    mv kn-windows-amd64.zip /usr/share/kn/windows/kn-windows-amd64.zip
+RUN mkdir -p /usr/share/kn/linux_amd64 && \
+    mkdir -p /usr/share/kn/macos && \
+    mkdir -p /usr/share/kn/windows && \
+    mv kn-linux-amd64.tar.gz /usr/share/kn/linux_amd64/ && \
+    mv kn-macos-amd64.tar.gz /usr/share/kn/macos/ && \
+    mv kn-windows-amd64.zip /usr/share/kn/windows/
 
 LABEL \
       com.redhat.component="openshift-serverless-1-tech-preview-client-kn-rhel8-container" \
