--- a/openshift/ci-operator/knative-images/client/Dockerfile.cliartifacts
+++ b/openshift/ci-operator/knative-images/client/Dockerfile.cliartifacts
@@ -1,15 +1,19 @@
 FROM registry.access.redhat.com/ubi8/ubi-minimal:latest
 
-RUN mkdir -p /usr/share/kn/{linux_amd64,macos,windows}
-COPY LICENSE .
-COPY kn-linux-amd64.tar.gz /usr/share/kn/linux_amd64/
-COPY kn-macos-amd64.tar.gz /usr/share/kn/macos/
-COPY kn-windows-amd64.zip /usr/share/kn/windows/
+RUN microdnf install -y zip tar gzip
+ADD package_cliartifacts.sh LICENSE kn-*-amd64* .
+RUN bash package_cliartifacts.sh && \
+    mkdir -p /usr/share/kn/linux_amd64 && \
+    mkdir -p /usr/share/kn/macos && \
+    mkdir -p /usr/share/kn/windows && \
+    mv kn-linux-amd64.tar.gz /usr/share/kn/linux_amd64/ && \
+    mv kn-macos-amd64.tar.gz /usr/share/kn/macos/ && \
+    mv kn-windows-amd64.zip /usr/share/kn/windows/
 
 LABEL \
       com.redhat.component="openshift-serverless-1-tech-preview-client-kn-rhel8-container" \
       name="openshift-serverless-1-tech-preview/client-kn-rhel8" \
-      version="v0.12.0" \
+      version="v0.13.0" \
       summary="Red Hat OpenShift Serverless 1 kn CLI" \
       description="CLI client 'kn' for managing Red Hat OpenShift Serverless 1" \
       io.k8s.display-name="Red Hat OpenShift Serverless 1 kn CLI" \
