--- a/Dockerfile.cliartifacts.rhel
+++ b/Dockerfile.cliartifacts.rhel
@@ -7,16 +7,19 @@ RUN microdnf install -y zip tar gzip && \
     bash package_cliartifacts.sh
 
 FROM ubi8-minimal:8-released
+WORKDIR /opt/app-root/src/go/src/github.com/knative/client
 RUN microdnf install -y python2 && \
   mkdir -p /usr/share/kn/{linux_amd64,macos,windows}
+COPY serve.py .
 COPY --from=packager /opt/app-root/src/go/src/github.com/knative/client/kn-linux-amd64.tar.gz /usr/share/kn/linux_amd64/
 COPY --from=packager /opt/app-root/src/go/src/github.com/knative/client/kn-macos-amd64.tar.gz /usr/share/kn/macos/
 COPY --from=packager /opt/app-root/src/go/src/github.com/knative/client/kn-windows-amd64.zip  /usr/share/kn/windows/
+CMD ["python2", "serve.py"]
 
 LABEL \
       com.redhat.component="openshift-serverless-1-client-kn-cli-artifacts-rhel8-container" \
       name="openshift-serverless-1/client-kn-cli-artifacts-rhel8" \
-      version="v0.13.2" \
+      version="nightly" \
       summary="Red Hat OpenShift Serverless 1 kn CLI artifacts" \
       description="'kn' CLI cross platform binaries for managing Red Hat OpenShift Serverless 1" \
       io.k8s.display-name="Red Hat OpenShift Serverless 1 kn CLI artifacts" \
