--- a/openshift/ci-operator/build-image/Dockerfile
+++ b/openshift/ci-operator/build-image/Dockerfile
@@ -18,7 +18,7 @@ FROM openshift/origin-release:golang-1.14
 # Add kubernetes repository
 ADD openshift/ci-operator/build-image/kubernetes.repo /etc/yum.repos.d/
 
-RUN yum install -y kubectl ansible
+RUN yum install -y kubectl ansible httpd-tools
 
 RUN GO111MODULE=on go get github.com/mikefarah/yq/v3
 
